--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "manifest_version" : 3,
     "permissions" : [
-        "declarativeNetRequest"
+        "declarativeNetRequest", "tabs","storage", "activeTab"
     ],
     "declarative_net_request" : { 
         "rule_resources" : [
@@ -15,6 +15,7 @@
         ]
     },
     "action" : {
-        "default_icon" : "adblock.png"
+        "default_icon" : "adblock.png",
+        "default_popup" : "popup.html"
     }
 }
