--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
     "name": "Ad blocker",
     "version": "1.0.0",
-    "manifest_version" : 3,
+    "manifest_version" : 2,
     "permissions" : [
-        "declarativeNetRequest", "tabs","storage", "activeTab"
+        "tabs","storage", "activeTab","webRequest", "webRequestBlocking", "<all_urls>"
     ],
-    "declarative_net_request" : { 
-        "rule_resources" : [
-            {
-                "id" : "ruleset_1",
-                "enabled" : true,
-                "path": "rules.json"
-            }
-        ]
+    "background": {
+        "scripts": ["rules.js"]
     },
+    "icons": {
+        "16": "icons/16.png",
+        "32": "icons/32.png",
+        "48": "icons/48.png",
+        "128": "icons/128.png"
+      },
+   
     "action" : {
         "default_icon" : "adblock.png",
         "default_popup" : "popup.html"
